# Code-Everyday-2020

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md
.github/workflows/: automated_update.yml
January/: README.md
January/week 1/forex_client_local/: git
January/week 1/forex_client_local/lib/forex_client/: api.rb
January/week 1/login-screen_local/src/: main.rs
January/week 1/login_screen_local/: Cargo.toml
January/week 1/login_screen_local/src/: main.rs  test.rs
