[package]
name = "login-screen"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
quiche = "0.1.0"
rpassword = "4.0.3"
reqwest = "0.10.0"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
tokio = { version = "0.2", features = ["macros"] }